@@ -14,6 +14,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, French, Italian, Russian and
 ....I..PS. [ZBXNEXT-1257] dropped support for UCD-SNMP (asaveljevs)
 
 Bug fixes:
+........S. [ZBX-7329] fixed vmware related compiling error on FreeBSD (wiper)
 ........S. [ZBX-7359] fixed possible crash when parsing vmware datastore data (wiper)
 ........S. [ZBX-7309] fixed resolving of {ITEM.VALUE} macro in recovery messages (Andris, Sasha)
 ..F....... [ZBX-7254] fixed selected tab not being reset when opening the host mass update form (Pavels)
